; ModuleID = '/home/carl/AnghaBench/git/extr_daemon.c_set_keep_alive.c'
source_filename = "/home/carl/AnghaBench/git/extr_daemon.c_set_keep_alive.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SOL_SOCKET = common dso_local global i32 0, align 4
@SO_KEEPALIVE = common dso_local global i32 0, align 4
@errno = common dso_local global i64 0, align 8
@ENOTSOCK = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [41 x i8] c"unable to set SO_KEEPALIVE on socket: %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @set_keep_alive to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_keep_alive(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32 1, i32* %3, align 4
  %4 = load i32, i32* %2, align 4
  %5 = load i32, i32* @SOL_SOCKET, align 4
  %6 = load i32, i32* @SO_KEEPALIVE, align 4
  %7 = call i64 @setsockopt(i32 %4, i32 %5, i32 %6, i32* %3, i32 4)
  %8 = icmp slt i64 %7, 0
  br i1 %8, label %9, label %18

9:                                                ; preds = %1
  %10 = load i64, i64* @errno, align 8
  %11 = load i64, i64* @ENOTSOCK, align 8
  %12 = icmp ne i64 %10, %11
  br i1 %12, label %13, label %17

13:                                               ; preds = %9
  %14 = load i64, i64* @errno, align 8
  %15 = call i32 @strerror(i64 %14)
  %16 = call i32 @logerror(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0), i32 %15)
  br label %17

17:                                               ; preds = %13, %9
  br label %18

18:                                               ; preds = %17, %1
  ret void
}

declare dso_local i64 @setsockopt(i32, i32, i32, i32*, i32) #1

declare dso_local i32 @logerror(i8*, i32) #1

declare dso_local i32 @strerror(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
